# python-crunchflow

./: .gitignore  .python-version  .readthedocs.yml  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ruff-lint.yml
crunchflow/: __init__.py  util.py
crunchflow/input/: __init__.py  blocks.py  inputfile.py
crunchflow/input/databases/: __init__.py  _io_utils.py  common.py
crunchflow/input/databases/aqueous/: __init__.py  database.py  database_entities.py
crunchflow/input/databases/thermo/: __init__.py  database.py  database_entities.py
crunchflow/output/: __init__.py  main_output.py  spatial.py  speciation.py  tec.py  timeseries.py
docs/: conf.py  index.rst  requirements.txt  tutorials.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  util.html
docs/_build/html/_modules/output/: tec.html  timeseries.html
docs/_build/html/_sources/: index.rst.txt
docs/_templates/autoapi/: index.rst
docs/notebooks/: InputModule.ipynb  OutputModule.ipynb
docs/notebooks/input_files/: surface_complexation.in  surface_complexation_pH8.in
docs/notebooks/output_files/: conc2.tec  conc3.tec  conc4.tec  conc5.tec  conc6.tec  permeability1.tec
tests/: test_aqueous_kinetics.py  test_run.py  test_spatial.py  test_speciation.py  test_timeseries.py  test_util.py
tests/data/: AqueousKinetics.dbs  cation_exchange.in  datacom.dbs  flow2d.in  speciation_exercise.in  totcon_exponenterror.tec
tests/data/cation_exchange/: breakthrough.out  correct_breakthrough.npy  correct_coords.npy  correct_exchange.npy  correct_totcon.npy  exchange1.out  exchange2.out  exchange3.out  exchange4.out  totcon1.out  totcon2.out  totcon3.out  totcon4.out
tests/data/flow2d/: TotMineral1.tec  TotMineral2.tec  TotMineral3.tec  TotMineral4.tec  TotMineral5.tec  correct_oxygen.npy  rate1.tec  rate2.tec  rate3.tec  rate4.tec  rate5.tec
tests/data/output_files/: ShortCourse10.out  correct_coords.npy  correct_velocity.npy  pH1.out  pH2.out  pH3.out  pH4.out  pH5.out
tests/data/wrr_floodplain_redox/: Well01.txt  correct_calcite.npy  correct_conc.npy  correct_conc_mgl.npy  correct_coords.npy  correct_griddedX.npy  correct_gypsum.npy  correct_perm.npy  permeability1.tec  volume740.tec
tutorials/: OutputModule.ipynb
tutorials/input_files/: minerals_example.in  surface_complexation_modified.in
tutorials/output_files/: conc1.tec  datacom.dbs
